tests/baselines/reference/computedPropertyNames2_ES5.errors.txt
computedPropertyNames2_ES5.ts(6,9): error TS2378: A 'get' accessor must return a value.
computedPropertyNames2_ES5.ts(6,9): error TS2411: Property '[accessorName]' of type 'void' is not assignable to 'string' index type '() => void'.
computedPropertyNames2_ES5.ts(8,16): error TS2378: A 'get' accessor must return a value.


==== computedPropertyNames2_ES5.ts (3 errors) ====
    var methodName = "method";
    var accessorName = "accessor";
    class C {
        [methodName]() { }
        static [methodName]() { }
        get [accessorName]() { }
            ~~~~~~~~~~~~~~
!!! error TS2378: A 'get' accessor must return a value.
            ~~~~~~~~~~~~~~
!!! error TS2411: Property '[accessorName]' of type 'void' is not assignable to 'string' index type '() => void'.
        set [accessorName](v) { }
        static get [accessorName]() { }
                   ~~~~~~~~~~~~~~
!!! error TS2378: A 'get' accessor must return a value.
        static set [accessorName](v) { }
    }